--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 <body>
 
     <div class="navbar">
-        <a href="https://ors.gov.in/healthid/index.jsp?NICSecurityORS=X8XW-D76K-CTNY-LBOF-3T8T-BOK9-5WU8-MESN">Create ABHI ID</a>
+        <a href="https://ors.gov.in/healthid/index.jsp?NICSecurityORS=X8XW-D76K-CTNY-LBOF-3T8T-BOK9-5WU8-MESN">Create ABHA ID</a>
         <a href="contact_us.html">Contact Us</a>
         <a href="about_us.html">About Us</a>
     </div>
