--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             margin-top: 60px;
         }
         .container {
-            width: 40%;
+            width: 28%;
             padding: 20px;
             background-color: #ffffff;
             border-radius: 8px;
@@ -92,6 +92,124 @@
             <p>Check and manage the availability of beds in the hospital.</p>
             <a href="bed_availability.html">
             <button type="button">Bed Availability</button>
+            </a>
+        </div>
+        <div class="container">
+            <h2>Blood Bank</h2>
+            <p>Donate or request blood to save lives.</p>
+            <a href="bloodbank.html">
+            <button type="button">Blood Bank</button>
+            </a>
+        </div>
+    </div>
+
+    <div class="footer">
+        <p>&copy; 2024 Medical Center. All rights reserved.</p>
+    </div>
+
+</body>
+</html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Medical Portal</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f0f8ff;
+            margin: 0;
+            padding: 0;
+        }
+        .navbar {
+            overflow: hidden;
+            background-color: #008080;
+            padding: 10px;
+        }
+        .navbar a {
+            float: left;
+            display: block;
+            color: #ffffff;
+            text-align: center;
+            padding: 14px 20px;
+            text-decoration: none;
+        }
+        .navbar a:hover {
+            background-color: #005f5f;
+            color: white;
+        }
+        .container-wrapper {
+            display: flex;
+            justify-content: space-around;
+            margin-top: 60px;
+        }
+        .container {
+            width: 28%;
+            padding: 20px;
+            background-color: #ffffff;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        .container h2 {
+            text-align: center;
+            margin-bottom: 20px;
+            color: #008080;
+        }
+        .container p {
+            text-align: center;
+            color: #555;
+            margin-bottom: 20px;
+        }
+        .container button {
+            background-color: #008080;
+            color: white;
+            padding: 14px 20px;
+            margin: 8px 0;
+            border: none;
+            cursor: pointer;
+            width: 100%;
+            border-radius: 4px;
+        }
+        .container button:hover {
+            background-color: #005f5f;
+        }
+        .footer {
+            text-align: center;
+            margin-top: 40px;
+            color: #777;
+        }
+    </style>
+</head>
+<body>
+
+    <div class="navbar">
+        <a href="https://ors.gov.in/healthid/index.jsp?NICSecurityORS=X8XW-D76K-CTNY-LBOF-3T8T-BOK9-5WU8-MESN">Create ABHA ID</a>
+        <a href="contact_us.html">Contact Us</a>
+        <a href="about_us.html">About Us</a>
+    </div>
+
+    <div class="container-wrapper">
+        <div class="container">
+            <h2>OPD's</h2>
+            <p>Manage outpatient department services and appointments.</p>
+            <!-- Link to OPD Login Page -->
+            <a href="opd_login.html">
+                <button type="button">Login to OPD</button>
+            </a>
+        </div>
+        <div class="container">
+            <h2>Bed Availability</h2>
+            <p>Check and manage the availability of beds in the hospital.</p>
+            <a href="bed_availability.html">
+            <button type="button">Bed Availability</button>
+            </a>
+        </div>
+        <div class="container">
+            <h2>Blood Bank</h2>
+            <p>Donate or request blood to save lives.</p>
+            <a href="bloodbank.html">
+            <button type="button">Blood Bank</button>
             </a>
         </div>
     </div>
