--- a/requestblood.html
+++ b/requestblood.html
@@ -19,13 +19,13 @@
             padding: 10px;
             width: 50%;
             font-size: 1.2em;
-            border: 1px solid #008080;
+            border: 1px solid  #004d66;
             border-radius: 5px;
         }
         button {
             padding: 10px 20px;
             font-size: 1.2em;
-            background-color: #008080;
+            background-color: #004d66;
             color: white;
             border: none;
             border-radius: 5px;
@@ -33,7 +33,7 @@
             margin-top: 20px;
         }
         button:hover {
-            background-color: #005f5f;
+            background-color: #004d66;
         }
     </style>
 </head>
