--- a/Displayhos.html
+++ b/Displayhos.html
@@ -22,7 +22,7 @@
             margin: 0 auto;
         }
         .hospital-list li {
-            background-color: #008080;
+            background-color:  #004d66 ;
             color: white;
             padding: 15px;
             margin: 10px 0;
@@ -30,7 +30,7 @@
             cursor: pointer;
         }
         .hospital-list li:hover {
-            background-color: #005f5f;
+            background-color:  #004d66;
         }
         .blood-details {
             display: none;
