--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
         <div class="container">
             <h2>OPD's</h2>
             <p>Manage outpatient department services and appointments.</p>
-            <a href="opd_login.html">
+            <a href="opd.html">
                 <button type="button">Login to OPD</button>
             </a>
         </div>
