--- a/opd.html
+++ b/opd.html
@@ -145,7 +145,7 @@
         </form>
 
         <p>If you don't have an ABHA ID, <a href="/create_abha" class="kk">Create ABHA ID</a></p>
-        <p>New User, <a href="/opd_login.html" class="kk">Create Password</a></p>
+        <p>New User, <a href="opd_login.html" class="kk">Create Password</a></p>
     </div>
 
     <!-- Footer -->
